Added code for triggering and creating action mode in Taskviewfragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="title_activity_view">View Activity</string>
     <string name="task">Task</string>
     <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
