--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="task">Task</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="delete_tasks">Delete Tasks</string>
 </resources>
